[gd_scene load_steps=4 format=3 uid="uid://cdgnkkgvihyrs"]

[ext_resource type="Theme" uid="uid://u2a8gk3qgmht" path="res://theme.tres" id="1_aefqm"]
[ext_resource type="Script" path="res://NodeGraph/node_graph.gd" id="2_uelve"]
[ext_resource type="PackedScene" uid="uid://bc2p61vw5rhbp" path="res://NodeGraph/nodes.tscn" id="3_xhu6k"]

[node name="NodeGraph" type="Control"]
texture_filter = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_aefqm")
script = ExtResource("2_uelve")

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
zoom_min = 0.0
zoom_max = 1.0
zoom_step = 1.1
show_zoom_label = true

[node name="Output" type="GraphNode" parent="GraphEdit"]
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 196.0
offset_bottom = 182.0
mouse_filter = 1
title = "Output"
position_offset = Vector2(100, 100)
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="Port0" type="SpinBox" parent="GraphEdit/Output"]
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="Nodes" parent="." instance=ExtResource("3_xhu6k")]
visible = false
layout_mode = 1

[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
